third_party/move/move-compiler-v2/transactional-tests/tests/no-v1-comparison/enum/round-trip/bug-14296.decompiled.baseline.exp
processed 1 task
task 0 lines 3-31:  publish [module 0x42::test {]
Error: compilation errors:
 error: cannot select field `y` since it has different types in variants of enum `E`
   ┌─ TEMPFILE:27:24
   │
27 │             return *&(&p0.y).x
   │                        ^^
   │
   = field `y` has type `S0` in variant `V2` and type `S1<u8, bool>` in variant `V1`


